--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "deploy:netlify": "npm run build:prod && netlify deploy --prod --dir=dist",
     "deploy:vercel": "npm run build:prod && vercel --prod",
     "deploy:github": "npm run build:prod && gh-pages -d dist",
-    "env:setup": "cp env.template .env",
-    "env:validate": "node -e \"require('./build.js').validateEnvironment()\"",
+    "env:setup": "node -e \"require('fs').copyFileSync('env.template', '.env')\"",
+    "env:validate": "node -e \"require('./build.js').validateEnv()\"",
     "lint": "eslint js/",
     "lint:fix": "eslint js/ --fix",
     "format": "prettier --write js/ styles/ *.html",
