--- a/package.json
+++ b/package.json
@@ -2,26 +2,9 @@
   "name": "podcast-website-frontend",
   "version": "1.0.0",
   "description": "Frontend for podcast website with RSS feed integration and file gallery",
-  "main": "build.js",
+  "main": "index.html",
   "scripts": {
-    "build": "node build.js build",
-    "build:dev": "node build.js build development",
-    "build:staging": "node build.js build staging",
-    "build:prod": "node build.js build production",
-    "serve": "node build.js serve",
-    "dev": "node build.js dev",
-    "start": "npm run dev",
-    "clean": "rimraf dist",
-    "preview": "npm run build:prod && npx serve dist",
-    "deploy:netlify": "npm run build:prod && netlify deploy --prod --dir=dist",
-    "deploy:vercel": "npm run build:prod && vercel --prod",
-    "deploy:github": "npm run build:prod && gh-pages -d dist",
-    "env:setup": "node -e \"require('fs').copyFileSync('env.template', '.env')\"",
-    "env:validate": "node -e \"require('./build.js').validateEnv()\"",
-    "lint": "eslint js/",
-    "lint:fix": "eslint js/ --fix",
-    "format": "prettier --write js/ styles/ *.html",
-    "test": "echo \"No tests specified\" && exit 0"
+    "start": "echo 'Frontend ready for deployment - no build process required'"
   },
   "keywords": [
     "podcast",
@@ -33,23 +16,7 @@
   ],
   "author": "Your Name",
   "license": "MIT",
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
-  },
   "dependencies": {},
-  "devDependencies": {
-    "express": "^4.18.2",
-    "rimraf": "^5.0.5",
-    "serve": "^14.2.1",
-    "eslint": "^8.55.0",
-    "prettier": "^3.1.0"
-  },
-  "optionalDependencies": {
-    "netlify-cli": "^17.10.1",
-    "vercel": "^32.7.0",
-    "gh-pages": "^6.1.0"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/yourusername/podcast-website.git",
@@ -58,37 +25,5 @@
   "bugs": {
     "url": "https://github.com/yourusername/podcast-website/issues"
   },
-  "homepage": "https://github.com/yourusername/podcast-website#readme",
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "eslintConfig": {
-    "env": {
-      "browser": true,
-      "es2021": true,
-      "node": true
-    },
-    "extends": [
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "rules": {
-      "no-unused-vars": "warn",
-      "no-console": "off",
-      "prefer-const": "error",
-      "no-var": "error"
-    }
-  },
-  "prettier": {
-    "semi": true,
-    "trailingComma": "es5",
-    "singleQuote": true,
-    "printWidth": 80,
-    "tabWidth": 2
-  }
+  "homepage": "https://github.com/yourusername/podcast-website#readme"
 }
