--- a/env.template
+++ b/env.template
@@ -1,64 +1,107 @@
 # Frontend Environment Configuration Template
-# Copy this file to .env and configure for your environment
+# Copy this file to .env and update the values for your deployment
 
-# Backend API Configuration
-# The base URL where your backend API is deployed
-# Examples:
-# - Local development: http://localhost:3000
-# - Azure Web Apps: https://your-app-name.azurewebsites.net
-# - Custom domain: https://api.yourdomain.com
-BACKEND_API_URL=http://localhost:3000
+# =============================================================================
+# BACKEND API CONFIGURATION
+# =============================================================================
 
-# Environment Detection
-# Set to 'development', 'staging', or 'production'
-NODE_ENV=development
+# Backend API URL - Update this with your Azure Web App URL
+# Example: https://your-app-name.azurewebsites.net
+# For local development: http://localhost:3000
+BACKEND_API_URL=https://hereco-backend.azurewebsites.net
 
-# API Settings
-API_TIMEOUT=30000
+# API Configuration
+API_TIMEOUT=10000
 API_RETRY_ATTEMPTS=3
 API_RETRY_DELAY=1000
 
-# Feature Flags
-ENABLE_DEBUG_LOGGING=true
-ENABLE_DEVELOPMENT_TOOLS=true
-ENABLE_PERFORMANCE_MONITORING=false
-ENABLE_ERROR_REPORTING=false
+# =============================================================================
+# ENVIRONMENT SETTINGS
+# =============================================================================
 
-# CORS Configuration
-# Frontend origin URLs (comma-separated for multiple origins)
-FRONTEND_ORIGINS=http://localhost:8080,http://localhost:3000
+# Environment mode (development, production, staging)
+NODE_ENV=production
 
-# Cache Settings
-ENABLE_FRONTEND_CACHING=true
+# Debug logging (true/false)
+DEBUG_MODE=false
+
+# Development tools (true/false)
+DEV_TOOLS=false
+
+# =============================================================================
+# CORS CONFIGURATION
+# =============================================================================
+
+# Enable CORS debugging (true/false)
+CORS_DEBUG=false
+
+# Allowed origins for CORS (comma-separated)
+# Example: https://your-frontend-domain.com,https://localhost:3000
+CORS_ORIGINS=https://your-frontend-domain.com
+
+# =============================================================================
+# PERFORMANCE SETTINGS
+# =============================================================================
+
+# Enable caching (true/false)
+ENABLE_CACHING=true
+
+# Cache duration in milliseconds
 CACHE_DURATION=300000
-MAX_CACHE_SIZE=50
 
-# Performance Settings
+# Enable lazy loading (true/false)
 ENABLE_LAZY_LOADING=true
-ENABLE_IMAGE_OPTIMIZATION=true
-ENABLE_PRELOADING=true
-ITEMS_PER_PAGE=12
 
-# Development Settings
-ENABLE_HOT_RELOAD=false
-ENABLE_SOURCE_MAPS=true
-ENABLE_DEVTOOLS=true
+# =============================================================================
+# AZURE WEB APP SPECIFIC SETTINGS
+# =============================================================================
 
-# Error Handling
-ENABLE_ERROR_BOUNDARIES=true
-ENABLE_RETRY_MECHANISMS=true
-MAX_RETRY_ATTEMPTS=3
+# Azure Web App name (for health checks)
+AZURE_WEB_APP_NAME=your-app-name
 
-# Analytics and Monitoring (Optional)
-# GOOGLE_ANALYTICS_ID=your_ga_id
-# SENTRY_DSN=your_sentry_dsn
-# LOG_LEVEL=info
+# Azure region (optional)
+AZURE_REGION=eastus
 
-# Build Configuration
-BUILD_TARGET=development
-ASSET_PREFIX=
-PUBLIC_URL=
+# =============================================================================
+# DEVELOPMENT OVERRIDES
+# =============================================================================
 
-# Deployment Configuration
-# DEPLOYMENT_URL=https://your-frontend-domain.com
-# CDN_URL=https://cdn.yourdomain.com
+# Local development backend URL (overrides BACKEND_API_URL in development)
+LOCAL_BACKEND_URL=http://localhost:3000
+
+# Enable local development mode (true/false)
+LOCAL_DEV_MODE=false
+
+# =============================================================================
+# API ENDPOINTS CONFIGURATION
+# =============================================================================
+
+# Health check endpoint
+HEALTH_ENDPOINT=/api/health
+
+# Podcast episodes endpoint
+PODCAST_ENDPOINT=/api/podcast/episodes
+
+# Files endpoint
+FILES_ENDPOINT=/api/files
+
+# =============================================================================
+# ERROR HANDLING
+# =============================================================================
+
+# Show detailed error messages (true/false)
+SHOW_DETAILED_ERRORS=false
+
+# Enable error reporting (true/false)
+ENABLE_ERROR_REPORTING=true
+
+# =============================================================================
+# CONFIGURATION NOTES
+# =============================================================================
+
+# 1. Update BACKEND_API_URL with your actual Azure Web App URL
+# 2. Update CORS_ORIGINS with your frontend domain(s)
+# 3. Set NODE_ENV to 'production' for live deployments
+# 4. Enable DEBUG_MODE only for troubleshooting
+# 5. Configure LOCAL_DEV_MODE for local development
+# 6. Update AZURE_WEB_APP_NAME with your actual app name
