--- a/vercel.json
+++ b/vercel.json
@@ -13,11 +13,10 @@
     }
   ],
   "env": {
-    "BACKEND_API_URL": "https://hereco-backend.azurewebsites.net",
     "NODE_ENV": "production",
-    "DEBUG_MODE": "false",
+    "DEBUG_MODE": "true",
     "DEV_TOOLS": "false",
-    "CORS_DEBUG": "false",
+    "CORS_DEBUG": "true",
     "CORS_ORIGINS": "*",
     "AZURE_WEB_APP_NAME": "hereco-backend",
     "AZURE_REGION": "eastus",
@@ -26,7 +25,7 @@
     "API_TIMEOUT": "10000",
     "ENABLE_CACHING": "true",
     "ENABLE_LAZY_LOADING": "true",
-    "SHOW_DETAILED_ERRORS": "false",
+    "SHOW_DETAILED_ERRORS": "true",
     "ENABLE_ERROR_REPORTING": "false"
   }
 }
