Update URL system to use query parameters matching site format

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/c/:chatId",
-      "destination": "/c.html"
+      "source": "/c",
+      "destination": "/chatbot.html"
     },
     {
       "source": "/chatbot",
