added downlaod page

--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,21 @@ Thumbs.db
 *.tmp
 *.temp
 
-# Frondend
-app/
+# Flutter App - Don't push Flutter frontend
+lib/
+android/
+ios/
+linux/
+macos/
+windows/
+web/
+test/
+pubspec.yaml
+pubspec.lock
+analysis_options.yaml
+.dart_tool/
+.flutter-plugins-dependencies
+build/
+*.iml
+run.sh
+.metadata
