--- a/app/.gitignore
+++ b/app/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Keystore files (keep secure)
+android/app/stewie.jks
+android/key.properties
